--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         
             <div class="  col-lg-4 col-sm-6  ">
               <div class="portfolio-item">
-                  <img src="/image/pro1.jpg" alt="pro1">
+                  <img src="image/pro1.jpg" alt="pro1">
                 <div class="portfolio-overlay">
                <div>
                 <h4 class="text-white">Project Title</h4>
@@ -165,7 +165,7 @@
 
             <div class="  col-lg-4 col-sm-6 ">
               <div class="portfolio-item">
-                  <img src="/image/pro2.jpg" alt="pro2">
+                  <img src="image/pro2.jpg" alt="pro2">
                 <div class="portfolio-overlay">
                <div>
                 <h4 class="text-white">Project Title</h4>
@@ -177,7 +177,7 @@
 
             <div class="  col-lg-4 col-sm-6 ">
               <div class="portfolio-item">
-                  <img src="/image/pro3.jpg" alt="pro3">
+                  <img src="image/pro3.jpg" alt="pro3">
                 <div class="portfolio-overlay">
                <div>
                 <h4 class="text-white">Project Title</h4>
@@ -189,7 +189,7 @@
 
             <div class="  col-lg-4 col-sm-6  ">
               <div class="portfolio-item">
-                  <img src="/image/pro4.jpg" alt="pro4">
+                  <img src="image/pro4.jpg" alt="pro4">
                 <div class="portfolio-overlay">
                <div>
                 <h4 class="text-white">Project Title</h4>
@@ -201,7 +201,7 @@
 
             <div class="  col-lg-4 col-sm-6 ">
               <div class="portfolio-item">
-                  <img src="/image/pro5.jpg" alt="pro5">
+                  <img src="image/pro5.jpg" alt="pro5">
                 <div class="portfolio-overlay">
                <div>
                 <h4 class="text-white">Project Title</h4>
@@ -213,7 +213,7 @@
 
             <div class="  col-lg-4 col-sm-6  ">
               <div class="portfolio-item">
-                  <img src="/image/pro6.jpg" alt="pro6">
+                  <img src="image/pro6.jpg" alt="pro6">
                 <div class="portfolio-overlay">
                <div>
                 <h4 class="text-white">Project Title</h4>
@@ -459,27 +459,27 @@
     <div class="row gy-4">
 
       <div class="col-lg-2 col-md-3 col-6 opa">
-        <img src="/image/logo1.svg" alt="">
+        <img src="image/logo1.svg" alt="">
       </div>
 
       <div class="col-lg-2 col-md-3 col-6 opa">
-        <img src="/image/logo2.svg" alt="">
+        <img src="image/logo2.svg" alt="">
       </div>
 
       <div class="col-lg-2 col-md-3 col-6 opa">
-        <img src="/image/logo3.svg" alt="">
+        <img src="image/logo3.svg" alt="">
       </div>
 
       <div class="col-lg-2 col-md-3 col-6 opa ">
-        <img src="/image/logo4.svg" alt="">
+        <img src="image/logo4.svg" alt="">
       </div>
 
       <div class="col-lg-2 col-md-3 col-6 opa">
-        <img src="/image/logo2.svg" alt="">
+        <img src="image/logo2.svg" alt="">
       </div>
 
       <div class="col-lg-2 col-md-3 col-6 opa">
-        <img src="/image/logo1.svg" alt="">
+        <img src="image/logo1.svg" alt="">
       </div>
 
     </div>
