--- a/register.html
+++ b/register.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Awesome </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="shortcut icon" href="./image/smile.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="image/smile.jpg" type="image/x-icon">
   </head>
   <body data-bs-spy="scroll" data-bs-target=".navbar">
     <!-- nav section start -->
@@ -24,7 +24,7 @@
              </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Services</a>
+                <a class="nav-link" href="Awesome/index.html">Services</a>
               </li>
 
               <li class="nav-item">
