--- a/register.html
+++ b/register.html
@@ -13,38 +13,38 @@
     <!-- nav section start -->
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand mx-5" href="/index.html"> <h2>Awesome 😋</h2></a>
+          <a class="navbar-brand mx-5" href="index.html"> <h2>Awesome 😋</h2></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto me-5 px-5 fs-5">
             <li class="nav-item">
-                <a class="nav-link active" href="/index.html">Home</a>
+                <a class="nav-link active" href="index.html">Home</a>
              </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="Awesome/index.html">Services</a>
+                <a class="nav-link" href="index.html">Services</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link " href="/index.html">Portfolio</a>
+                <a class="nav-link " href="index.html">Portfolio</a>
               </li>
            
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Features</a>
+                <a class="nav-link" href="index.html">Features</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Team </a>
+                <a class="nav-link" href="index.html">Team </a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Testimonials</a>
+                <a class="nav-link" href="index.html">Testimonials</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Contact</a>
+                <a class="nav-link" href="index.html">Contact</a>
               </li>
 
             </ul>
