--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="col-md-10">
                     <h1 class="text-white display-4 mb-2">WE ARE CREATIVE AGENCY, CREATIVE PEOPLE</h1>
                     <p class="text-white mb-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less.</p>
-                    <a href="/signin.html" class="btn btn-kaji">Get Started <i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="signin.html" class="btn btn-kaji">Get Started <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
