--- a/signin.html
+++ b/signin.html
@@ -54,7 +54,7 @@
     <!-- nav section end  -->
       
 <section id="sign">
-    <div class="container  mb-5 custom-signin ">
+    <div class="container  col-md-6 mb-5 custom-signin ">
         
       <main class="form-signin w-25 m-auto border border-1 border-success rounded-3 bg-body-tertiary ">
           <form>
