--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
       <section id="team" class="row  g-0 py-0 text-center">
       <div class="col-lg-3 col-sm-6 team-member">
         <div class="team-member-img">
-          <img src="/image/team1.jpg" alt="">
+          <img src="image/team1.jpg" alt="">
           <div class="social-links">
             <a href=""> <i class='bx bxl-facebook'></i></a>
             <a href=""> <i class='bx bxl-instagram'></i></a>
@@ -324,7 +324,7 @@
 
       <div class="col-lg-3 col-sm-6 team-member even ">
         <div class="team-member-img">
-          <img src="/image/team2.jpg" alt="">
+          <img src="image/team2.jpg" alt="">
           <div class="social-links">
             <a href=""> <i class='bx bxl-facebook'></i></a>
             <a href=""> <i class='bx bxl-instagram'></i></a>
@@ -341,7 +341,7 @@
 
       <div class="col-lg-3 col-sm-6 team-member">
         <div class="team-member-img">
-          <img src="/image/team3.jpg" alt="">
+          <img src="image/team3.jpg" alt="">
           <div class="social-links">
             <a href=""> <i class='bx bxl-facebook'></i></a>
             <a href=""> <i class='bx bxl-instagram'></i></a>
@@ -358,7 +358,7 @@
 
       <div class="col-lg-3 col-sm-6 team-member even ">
         <div class="team-member-img">
-          <img src="/image/team4.jpg" alt="">
+          <img src="image/team4.jpg" alt="">
           <div class="social-links">
             <a href=""> <i class='bx bxl-facebook'></i></a>
             <a href=""> <i class='bx bxl-instagram'></i></a>
@@ -383,17 +383,17 @@
             <ul class="nav nav-pills justify-content-center mb-3" id="pills-tab" role="tablist">
               <li class="nav-item" role="presentation">
                 <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">
-                   <img src="/image/team1.jpg"  alt="">
+                   <img src="image/team1.jpg"  alt="">
                 </button>
               </li>
               <li class="nav-item" role="presentation">
                 <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">
-                 <img src="/image/team3.jpg" alt="">
+                 <img src="image/team3.jpg" alt="">
                 </button>
               </li>
               <li class="nav-item" role="presentation">
                 <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
-                 <img src="/image/team4.jpg" alt="">
+                 <img src="image/team4.jpg" alt="">
                 </button>
               </li>
             </ul>
@@ -494,7 +494,7 @@
   <div class="container">
     <div class="row ">
       <div class="col-lg-4">
-        <img src="/image/conto.jpg" alt="">
+        <img src="image/conto.jpg" alt="">
       </div>
       <div class="col-lg-6 offset-lg-1">
         <form>
