--- a/register.html
+++ b/register.html
@@ -84,7 +84,7 @@
                 </div>
             
                 <button class="w-100 btn btn-lg btn-kaji mt-4 mb-3" type="submit">Register</button>
-                Have an account? Please <a href="/signin.html">Sign In</a>
+                Have an account? Please <a href="signin.html">Sign In</a>
                 <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
               </form>
             </main>
